Fixed bug in Validation and Test generation
Deleted rows without enough valid recommendations

--- a/Data Cleaning/Valid_recommendation_set.ipynb
+++ b/Data Cleaning/Valid_recommendation_set.ipynb
@@ -2204,14 +2204,72 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explore how many rows don't have 15 recommendations\n",
+    "remove_reviews = list()\n",
+    "for index, row in test_df.iterrows():\n",
+    "    if type(row[\"valid_recommendations\"]) == float:\n",
+    "        remove_reviews.append(row[\"reviewID\"])\n",
+    "    elif len(row[\"valid_recommendations\"]) < 15:\n",
+    "        remove_reviews.append(row[\"reviewID\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "718"
+       "2362"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count of rows without enough reviews\n",
+    "len(remove_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luciaronchi/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4102: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop rows without enough reviews\n",
+    "test_df.drop(index = remove_reviews, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "449"
+      ]
+     },
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,16 +2293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27185"
+       "25092"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2322,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2285,7 +2343,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2314,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2420,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2443,16 +2501,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explore how many rows don't have 15 recommendations\n",
+    "remove_reviews = list()\n",
+    "for index, row in validation_df.iterrows():\n",
+    "    if type(row[\"valid_recommendations\"]) == float:\n",
+    "        remove_reviews.append(row[\"reviewID\"])\n",
+    "    elif len(row[\"valid_recommendations\"]) < 15:\n",
+    "        remove_reviews.append(row[\"reviewID\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1505"
+       "3155"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count of rows without enough reviews\n",
+    "len(remove_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows without enough reviews\n",
+    "validation_df.drop(index = remove_reviews, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1040"
+      ]
+     },
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2465,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2476,16 +2580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "55146"
+       "52456"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2496,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2505,7 +2609,7 @@
        "True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2630,7 @@
        "True"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2545,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2553,8 +2657,8 @@
      "output_type": "stream",
      "text": [
       "(202990, 22)\n",
-      "(55146, 22)\n",
-      "(27185, 22)\n"
+      "(52456, 22)\n",
+      "(25092, 22)\n"
      ]
     }
    ],
@@ -2567,16 +2671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71.1444303083194"
+       "72.35739899764025"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2588,16 +2692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.32770458536175"
+       "18.698358154688492"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,16 +2713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.527865106318847"
+       "8.94424284767126"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2647,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2657,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
