--- a/Data Cleaning/Valid_recommendation_set.ipynb
+++ b/Data Cleaning/Valid_recommendation_set.ipynb
@@ -2056,7 +2056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a valid recommendation set for Test"
+    "## Creating a valid recommendation set for Validation"
    ]
   },
   {
@@ -2065,8 +2065,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use both Train and Test history for this\n",
-    "data = test_df"
+    "# Use both Train and Validation history for this\n",
+    "data_train_val = pd.concat([train_df, validation_df], sort = False)"
    ]
   },
   {
@@ -2076,13 +2076,13 @@
    "outputs": [],
    "source": [
     "# Filter 4 and 5 reviews, order by reviewer, rating, and reviewtime in descending order\n",
-    "positive_reviews = data[(data[\"overall\"] == 4) | (data[\"overall\"] == 5)].sort_values(by = [\"reviewerID\", \"overall\", \"reviewTime\"], axis = 0, ascending = False)[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\"]]\n",
+    "positive_reviews = data_train_val[(data_train_val[\"overall\"] == 4) | (data_train_val[\"overall\"] == 5)].sort_values(by = [\"reviewerID\", \"overall\", \"reviewTime\"], axis = 0, ascending = False)[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\"]]\n",
     "\n",
     "# Create dictionary with top 15 (if possible) reviews for each reviewer\n",
     "positive_dict = dict()\n",
+    "\n",
     "# Loop over each row, adding reviewers and their preferences\n",
     "for index, row in positive_reviews.iterrows():\n",
-    "    \n",
     "    if row[\"reviewerID\"] not in positive_dict.keys():\n",
     "        positive_dict[row[\"reviewerID\"]] = [row[\"productID\"]]\n",
     "    \n",
@@ -2090,7 +2090,7 @@
     "        positive_dict[row[\"reviewerID\"]].append(row[\"productID\"])\n",
     "\n",
     "# Order reviews by reviewerID and date in decending order\n",
-    "ordered_data = data.sort_values(by = [\"reviewerID\", \"reviewTime\"], axis = 0, ascending = False)\n",
+    "ordered_data = data_train_val.sort_values(by = [\"reviewerID\", \"reviewTime\"], axis = 0, ascending = False)\n",
     "ordered_data = ordered_data[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\", \"also_buy\"]]\n",
     "\n",
     "# Drop rows with no recommendation\n",
@@ -2104,6 +2104,7 @@
     "\n",
     "# Create dictionary with top 15 (if possible) products from also_buy, starting with the most recent recommendations\n",
     "also_buy_dict = dict()\n",
+    "\n",
     "# Loop over each row, adding reviewers and their recommended products\n",
     "for index, row in ordered_data.iterrows():\n",
     "   \n",
@@ -2129,7 +2130,7 @@
     "            also_buy_dict[row[\"reviewerID\"]].extend(row[\"amz_recommendation\"])\n",
     "\n",
     "# Create list of unique users for easier iteration\n",
-    "unique_users = data[\"reviewerID\"].unique()\n",
+    "unique_users = data_train_val[\"reviewerID\"].unique()\n",
     "\n",
     "# Create final recommendation set dictionary\n",
     "rec_dict = dict()\n",
@@ -2174,7 +2175,7 @@
    "outputs": [],
    "source": [
     "# Rename dictionary\n",
-    "test_recommendation_dict = rec_dict"
+    "validation_recommendation_dict = rec_dict"
    ]
   },
   {
@@ -2197,7 +2198,7 @@
    ],
    "source": [
     "# Save recommendation set to dataframe\n",
-    "test_df[\"valid_recommendations\"] = test_df[\"reviewerID\"].map(test_recommendation_dict)"
+    "validation_df[\"valid_recommendations\"] = validation_df[\"reviewerID\"].map(validation_recommendation_dict)"
    ]
   },
   {
@@ -2208,9 +2209,12 @@
    "source": [
     "# Explore how many rows don't have 15 recommendations\n",
     "remove_reviews = list()\n",
-    "for index, row in test_df.iterrows():\n",
+    "\n",
+    "for index, row in validation_df.iterrows():\n",
+    "    \n",
     "    if type(row[\"valid_recommendations\"]) == float:\n",
     "        remove_reviews.append(row[\"reviewID\"])\n",
+    "    \n",
     "    elif len(row[\"valid_recommendations\"]) < 15:\n",
     "        remove_reviews.append(row[\"reviewID\"])"
    ]
@@ -2223,7 +2227,7 @@
     {
      "data": {
       "text/plain": [
-       "2362"
+       "455"
       ]
      },
      "execution_count": 52,
@@ -2255,7 +2259,7 @@
    ],
    "source": [
     "# Drop rows without enough reviews\n",
-    "test_df.drop(index = remove_reviews, inplace = True)"
+    "validation_df.drop(index = remove_reviews, inplace = True)"
    ]
   },
   {
@@ -2266,7 +2270,7 @@
     {
      "data": {
       "text/plain": [
-       "449"
+       "1050"
       ]
      },
      "execution_count": 54,
@@ -2275,9 +2279,9 @@
     }
    ],
    "source": [
-    "# Count products and/or items not in Train\n",
-    "len(test_df)-len(test_df[(test_df['reviewerID'].isin(train_df['reviewerID'])) \n",
-    "        & (test_df['productID'].isin(train_df['productID']))])"
+    "# Count products and items not in Train\n",
+    "len(validation_df)-len(validation_df[(validation_df['reviewerID'].isin(train_df['reviewerID'])) \n",
+    "        & (validation_df['productID'].isin(train_df['productID']))])"
    ]
   },
   {
@@ -2286,9 +2290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For Test set, keep only rows with products and users present in Train set\n",
-    "test_df = test_df[(test_df['reviewerID'].isin(train_df['reviewerID'])) \n",
-    "        & (test_df['productID'].isin(train_df['productID']))]"
+    "# For Validation set, keep only rows with products and users present in Train set\n",
+    "validation_df = validation_df[(validation_df['reviewerID'].isin(train_df['reviewerID'])) \n",
+    "        & (validation_df['productID'].isin(train_df['productID']))]"
    ]
   },
   {
@@ -2299,7 +2303,7 @@
     {
      "data": {
       "text/plain": [
-       "25092"
+       "55146"
       ]
      },
      "execution_count": 56,
@@ -2308,7 +2312,7 @@
     }
    ],
    "source": [
-    "len(test_df)"
+    "len(validation_df)"
    ]
   },
   {
@@ -2329,7 +2333,7 @@
    ],
    "source": [
     "# All reviewers from Test contained in Train?\n",
-    "sum(test_df[\"reviewerID\"].isin(train_df[\"reviewerID\"].unique())) == len(test_df)"
+    "sum(validation_df[\"reviewerID\"].isin(train_df[\"reviewerID\"].unique())) == len(validation_df)"
    ]
   },
   {
@@ -2350,14 +2354,14 @@
    ],
    "source": [
     "# All products from Test contained in Train?\n",
-    "sum(test_df[\"productID\"].isin(train_df[\"productID\"].unique())) == len(test_df)"
+    "sum(validation_df[\"productID\"].isin(train_df[\"productID\"].unique())) == len(validation_df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a valid recommendation set for Validation"
+    "## Creating a valid recommendation set for Test"
    ]
   },
   {
@@ -2366,8 +2370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use both Train and Test history for this\n",
-    "data = validation_df"
+    "# Use Train, Validation and Test history for this\n",
+    "data_train_val_test = pd.concat([train_df, validation_df, test_df], sort = False)"
    ]
   },
   {
@@ -2377,19 +2381,21 @@
    "outputs": [],
    "source": [
     "# Filter 4 and 5 reviews, order by reviewer, rating, and reviewtime in descending order\n",
-    "positive_reviews = data[(data[\"overall\"] == 4) | (data[\"overall\"] == 5)].sort_values(by = [\"reviewerID\", \"overall\", \"reviewTime\"], axis = 0, ascending = False)[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\"]]\n",
+    "positive_reviews = data_train_val_test[(data_train_val_test[\"overall\"] == 4) | (data_train_val_test[\"overall\"] == 5)].sort_values(by = [\"reviewerID\", \"overall\", \"reviewTime\"], axis = 0, ascending = False)[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\"]]\n",
     "\n",
     "# Create dictionary with top 15 (if possible) reviews for each reviewer\n",
     "positive_dict = dict()\n",
+    "\n",
     "# Loop over each row, adding reviewers and their preferences\n",
     "for index, row in positive_reviews.iterrows():\n",
     "    if row[\"reviewerID\"] not in positive_dict.keys():\n",
     "        positive_dict[row[\"reviewerID\"]] = [row[\"productID\"]]\n",
+    "    \n",
     "    elif len(positive_dict[row[\"reviewerID\"]]) < 15:\n",
     "        positive_dict[row[\"reviewerID\"]].append(row[\"productID\"])\n",
     "\n",
     "# Order reviews by reviewerID and date in decending order\n",
-    "ordered_data = data.sort_values(by = [\"reviewerID\", \"reviewTime\"], axis = 0, ascending = False)\n",
+    "ordered_data = data_train_val_test.sort_values(by = [\"reviewerID\", \"reviewTime\"], axis = 0, ascending = False)\n",
     "ordered_data = ordered_data[[\"reviewID\", \"overall\", \"reviewTime\", \"reviewerID\", \"productID\", \"also_buy\"]]\n",
     "\n",
     "# Drop rows with no recommendation\n",
@@ -2403,6 +2409,7 @@
     "\n",
     "# Create dictionary with top 15 (if possible) products from also_buy, starting with the most recent recommendations\n",
     "also_buy_dict = dict()\n",
+    "\n",
     "# Loop over each row, adding reviewers and their recommended products\n",
     "for index, row in ordered_data.iterrows():\n",
     "   \n",
@@ -2428,7 +2435,7 @@
     "            also_buy_dict[row[\"reviewerID\"]].extend(row[\"amz_recommendation\"])\n",
     "\n",
     "# Create list of unique users for easier iteration\n",
-    "unique_users = data[\"reviewerID\"].unique()\n",
+    "unique_users = data_train_val_test[\"reviewerID\"].unique()\n",
     "\n",
     "# Create final recommendation set dictionary\n",
     "rec_dict = dict()\n",
@@ -2473,7 +2480,7 @@
    "outputs": [],
    "source": [
     "# Rename dictionary\n",
-    "validation_recommendation_dict = rec_dict"
+    "test_recommendation_dict = rec_dict"
    ]
   },
   {
@@ -2496,7 +2503,7 @@
    ],
    "source": [
     "# Save recommendation set to dataframe\n",
-    "validation_df[\"valid_recommendations\"] = validation_df[\"reviewerID\"].map(validation_recommendation_dict)"
+    "test_df[\"valid_recommendations\"] = test_df[\"reviewerID\"].map(test_recommendation_dict)"
    ]
   },
   {
@@ -2507,9 +2514,12 @@
    "source": [
     "# Explore how many rows don't have 15 recommendations\n",
     "remove_reviews = list()\n",
-    "for index, row in validation_df.iterrows():\n",
+    "\n",
+    "for index, row in test_df.iterrows():\n",
+    "    \n",
     "    if type(row[\"valid_recommendations\"]) == float:\n",
     "        remove_reviews.append(row[\"reviewID\"])\n",
+    "    \n",
     "    elif len(row[\"valid_recommendations\"]) < 15:\n",
     "        remove_reviews.append(row[\"reviewID\"])"
    ]
@@ -2522,7 +2532,7 @@
     {
      "data": {
       "text/plain": [
-       "3155"
+       "265"
       ]
      },
      "execution_count": 64,
@@ -2542,7 +2552,7 @@
    "outputs": [],
    "source": [
     "# Drop rows without enough reviews\n",
-    "validation_df.drop(index = remove_reviews, inplace = True)"
+    "test_df.drop(index = remove_reviews, inplace = True)"
    ]
   },
   {
@@ -2553,7 +2563,7 @@
     {
      "data": {
       "text/plain": [
-       "1040"
+       "453"
       ]
      },
      "execution_count": 66,
@@ -2562,9 +2572,9 @@
     }
    ],
    "source": [
-    "# Count products and items not in Train\n",
-    "len(validation_df)-len(validation_df[(validation_df['reviewerID'].isin(train_df['reviewerID'])) \n",
-    "        & (validation_df['productID'].isin(train_df['productID']))])"
+    "# Count products and/or items not in Train\n",
+    "len(test_df)-len(test_df[(test_df['reviewerID'].isin(train_df['reviewerID'])) \n",
+    "        & (test_df['productID'].isin(train_df['productID']))])"
    ]
   },
   {
@@ -2573,9 +2583,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For Validation set, keep only rows with products and users present in Train set\n",
-    "validation_df = validation_df[(validation_df['reviewerID'].isin(train_df['reviewerID'])) \n",
-    "        & (validation_df['productID'].isin(train_df['productID']))]"
+    "# For Test set, keep only rows with products and users present in Train set\n",
+    "test_df = test_df[(test_df['reviewerID'].isin(train_df['reviewerID'])) \n",
+    "        & (test_df['productID'].isin(train_df['productID']))]"
    ]
   },
   {
@@ -2586,7 +2596,7 @@
     {
      "data": {
       "text/plain": [
-       "52456"
+       "27185"
       ]
      },
      "execution_count": 68,
@@ -2595,7 +2605,7 @@
     }
    ],
    "source": [
-    "len(validation_df)"
+    "len(test_df)"
    ]
   },
   {
@@ -2616,7 +2626,7 @@
    ],
    "source": [
     "# All reviewers from Test contained in Train?\n",
-    "sum(validation_df[\"reviewerID\"].isin(train_df[\"reviewerID\"].unique())) == len(validation_df)"
+    "sum(test_df[\"reviewerID\"].isin(train_df[\"reviewerID\"].unique())) == len(test_df)"
    ]
   },
   {
@@ -2637,7 +2647,7 @@
    ],
    "source": [
     "# All products from Test contained in Train?\n",
-    "sum(validation_df[\"productID\"].isin(train_df[\"productID\"].unique())) == len(validation_df)"
+    "sum(test_df[\"productID\"].isin(train_df[\"productID\"].unique())) == len(test_df)"
    ]
   },
   {
@@ -2657,8 +2667,8 @@
      "output_type": "stream",
      "text": [
       "(202990, 22)\n",
-      "(52456, 22)\n",
-      "(25092, 22)\n"
+      "(55146, 22)\n",
+      "(27185, 22)\n"
      ]
     }
    ],
@@ -2677,7 +2687,7 @@
     {
      "data": {
       "text/plain": [
-       "72.35739899764025"
+       "71.1444303083194"
       ]
      },
      "execution_count": 72,
@@ -2693,12 +2703,14 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18.698358154688492"
+       "19.32770458536175"
       ]
      },
      "execution_count": 73,
@@ -2719,7 +2731,7 @@
     {
      "data": {
       "text/plain": [
-       "8.94424284767126"
+       "9.527865106318847"
       ]
      },
      "execution_count": 74,
